--- a/7.1/fpm/Dockerfile
+++ b/7.1/fpm/Dockerfile
@@ -128,6 +128,7 @@ RUN set -xe \
 		--enable-mbstring \
 # --enable-mysqlnd is included here because it's harder to compile after the fact than extensions are (since it's a plugin for several extensions, not an extension in itself)
 		--enable-mysqlnd \
+		--enable-debug \
 		\
 		--with-curl \
 		--with-libedit \
